--- a/platformio.ini
+++ b/platformio.ini
@@ -2,6 +2,9 @@
 ; Also you can force to clear LEDs on the esp8266 start up (-DCLEAR_LEDS=number_of_leds_to_clear)
 ; The pinout can not be changed for esp8266 board
 
+[platformio]
+default_envs = WS2812x_RGB, WS2812x_RGBW
+
 [env]
 extra_scripts = pre:extra_script.py
 platform = atmelavr
