--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,6 @@
 default_envs = WS2812x_RGB, WS2812x_RGBW
 
 [env]
-extra_scripts = pre:extra_script.py
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
@@ -18,7 +17,9 @@ build_flags =
     -DSERIAL_RX_BUFFER_SIZE=512
     ; -DSERIAL_TX_BUFFER_SIZE=256
     -DLED_PIN=2 
-    -DCLEAR_LEDS=107
+    ; -DCLEAR_LEDS=
+
+extra_scripts = pre:extra_script.py
 
 [env:WS2812x_RGB]
 build_flags = -DNEOPIXEL_RGBW ${env.build_flags}
